# VideoSort

./: .gitignore  VideoSort.py  build.sh  pyproject.toml  testdata.json  testsort.py
