[tool.poetry]
name = "videosort"
version = "9.0"
description = "Video sorting script for NZBGet"
authors = ["Andrey Prygunkov (nzbget@gmail.com)"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
guessit = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
